# topstep-trading-bot-demo

./: LICENSE  README.md  pyproject.toml
data/: sample_prices.csv
scripts/: generate_data.py
src/topstep_demo/: broker.py  cli.py  config.py  data.py  logging_utils.py  report.py  risk.py  runner.py  strategy.py
